--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
     const precosTrufado = { "250g": 40, "350g": 55, "500g": 75, "1kg": 140 };
     const precosTrad = { "100g": 13.5, "250g": 27, "350g": 37.5, "500g": 48.5, "1kg": 97 };
 
+    // Recuperando sua lista de fotos original
+    const fotosOriginais = [
+        "https://i.ibb.co/RTZqtmrB/foto2.jpg", "https://i.ibb.co/fG9qKD1F/foto3.jpg", 
+        "https://i.ibb.co/7N8bkw5r/foto4.jpg", "https://i.ibb.co/K8j6Fw1/foto5.jpg",
+        "https://i.ibb.co/vxKTSbsS/foto6.jpg", "https://i.ibb.co/jYKg1bb/foto7.jpg",
+        "https://i.ibb.co/99pgmZHk/foto8.jpg", "https://i.ibb.co/4ZppJ7D1/foto9.jpg",
+        "https://i.ibb.co/PZnXXchM/foto10.jpg", "https://i.ibb.co/9HS8LZs3/foto11.jpg",
+        "https://i.ibb.co/TxQQbfdt/foto12.jpg", "https://i.ibb.co/9mbQkL1b/foto13.jpg"
+    ];
+
     const nomesOvosColher = [
         "Ovo de colher com Marshmallow", "Ovo de colher com cerejas brigadeiro e beijinho", "Ovo de colher com M&Ms",
         "Ovo de colher com cerejas e raspas de chocolate", "Ovo de colher com Beijinho e Brigadeiro", "Ovo de colher com Morangos",
@@ -118,7 +128,7 @@
     function init() {
         let hColher = "";
         for (let i = 0; i < 15; i++) {
-            hColher += `<div class="card-item"><div class="card-conteudo"><h3>${nomesOvosColher[i]}</h3>
+            hColher += `<div class="card-item"><img src="${fotosOriginais[i % fotosOriginais.length]}" class="foto-produto"><div class="card-conteudo"><h3>${nomesOvosColher[i]}</h3>
             <label>Tamanho:</label><select id="p_colher_${i}" onchange="calc()"><option value="500g">500g - R$80</option><option value="350g">350g - R$65</option><option value="250g">250g - R$50</option><option value="150g">150g - R$35</option></select>
             <label>Tipo de Casca:</label><select id="c_colher_${i}"><option>Ao Leite</option><option>Meio Amargo</option><option>Branco</option><option>Crocante</option></select>
             <label>Recheio:</label><select id="r_colher_${i}" onchange="calc()"><option>Brigadeiro</option><option>Chocolate</option><option>Maracujá</option><option>Limão</option><option>Beijinho</option><option>Doce de Leite</option><option>Ninho (+R$5)</option><option>Pistache (+R$5)</option></select>
@@ -128,7 +138,7 @@
 
         let hTruf = "";
         saboresTrufados.forEach((sabor, i) => {
-            hTruf += `<div class="card-item"><div class="card-conteudo"><h3>Ovo Trufado ${sabor}</h3>
+            hTruf += `<div class="card-item"><img src="https://i.ibb.co/N6GfdJmH/images-6.jpg" class="foto-produto"><div class="card-conteudo"><h3>Ovo Trufado ${sabor}</h3>
             <label>Tamanho:</label><select id="p_truf_${i}" onchange="calc()"><option value="500g">500g - R$75</option><option value="350g">350g - R$55</option><option value="250g">250g - R$40</option><option value="1kg">1kg - R$140</option></select>
             <label>Tipo de Casca:</label><select id="c_truf_${i}"><option>Ao Leite</option><option>Meio Amargo</option><option>Branco</option></select>
             <div class="controles"><button class="btn-qtd" onclick="qtd('truf_${i}',-1)">-</button><span class="qtd-num" id="q_truf_${i}">0</span><button class="btn-qtd" onclick="qtd('truf_${i}',1)">+</button></div></div></div>`;
@@ -137,7 +147,7 @@
 
         let hTrad = "";
         tiposTrad.forEach((tipo, i) => {
-            hTrad += `<div class="card-item"><div class="card-conteudo"><h3>Ovo Tradicional ${tipo}</h3>
+            hTrad += `<div class="card-item"><img src="https://i.ibb.co/1f2W9Pyx/IMG-20250418-WA0003.jpg" class="foto-produto"><div class="card-conteudo"><h3>Ovo Tradicional ${tipo}</h3>
             <label>Tamanho:</label><select id="p_trad_${i}" onchange="calc()"><option value="500g">500g - R$48.50</option><option value="350g">350g - R$37.50</option><option value="250g">250g - R$27.00</option><option value="1kg">1kg - R$97.00</option><option value="100g">100g - R$13.50</option></select>
             <label>Tipo de Casca:</label><select id="c_trad_${i}"><option>${tipo}</option></select>
             <div class="controles"><button class="btn-qtd" onclick="qtd('trad_${i}',-1)">-</button><span class="qtd-num" id="q_trad_${i}">0</span><button class="btn-qtd" onclick="qtd('trad_${i}',1)">+</button></div></div></div>`;
@@ -175,7 +185,7 @@
         let pag = document.getElementById('pagamento').value;
         let total = document.getElementById('totalExibido').innerText;
 
-        if (!n || total === "0.00") return alert("Preencha seu nome e escolha os produtos!");
+        if (!n || total === "0.00") return alert("Por favor, preencha seu nome e selecione os itens!");
 
         let texto = `*🍫 NOVO PEDIDO - CHOCOMELK 🍫*\n`;
         texto += `------------------------------------------\n`;
@@ -215,12 +225,16 @@
 
         if (carrinhoTrufas.length > 0) {
             texto += `✅ *TRUFAS ARTESANAIS:*\n`;
-            carrinhoTrufas.forEach(t => texto += `   • 1x sabor ${t.sabor}\n`);
+            let contagem = {};
+            carrinhoTrufas.forEach(t => contagem[t.sabor] = (contagem[t.sabor] || 0) + 1);
+            for (let s in contagem) {
+                texto += `   • ${contagem[s]}x sabor ${s}\n`;
+            }
             texto += `\n`;
         }
 
         texto += `------------------------------------------\n`;
-        texto += `*💰 TOTAL: R$ ${total}*`;
+        texto += `*💰 TOTAL DO PEDIDO: R$ ${total}*`;
 
         window.open(`https://wa.me/5581989873733?text=${encodeURIComponent(texto)}`);
     }
